--- a/_presentations/2012-03-01-talk-1.md
+++ b/_presentations/2012-03-01-talk-1.md
@@ -1,11 +1,13 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "DevSecOps: How to integrate Security & Compliance into your Continuous Delivery pipelines"
 collection: talks
-type: "Talk"
-permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
+type: "Webinar"
+permalink: /presentations/2018-11-21-devsecops-webinar.md
+venue: "Webinar"
 date: 2012-03-01
-location: "San Francisco, California"
+location: "London, Uk"
 ---
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+DevSecOps: How to integrate Security & Compliance into your Continuous Delivery pipelines
+
+[Download PDF](/files/Micro%20Focus%20-%20DevSecOps%20and%20Continuous%20Delivery.pdf)
